# cookiecutter-python

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .setup.cfg  CHANGELOG.rst  Makefile  README.md  README.rst  README_after_build.md  README_after_build.rst  build_project.py  cookiecutter.json  environment.yml  environment_dev.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test.sh  todo.md
doc/source/: conf.py  index.rst
doc/source/_templates/: custom-class-template.rst
examples/: 02_axis_but_not_generated.py  plot_01_first_test.py  plot_02_basic_exemple.py
hooks/: post_gen_project.py
new_project/: log.py
src/new_project/: __init__.py  log.py
src/project_builder/project_files/: CHANGELOG.md  README.md  build_project.py  pyproject.toml  setup.cfg  test.sh
src/project_builder/project_files/doc/source/: index.rst
src/project_builder/project_files/scripts/: new_project
src/project_builder/project_files/src/new_project/: log.py
src/start_project/: __init__.py  appli.py  log.py
src/start_project/assets/common/: .gitignore  .tmp_gitlab-ci.yml  Makefile  README.md  environment.yml  environment_dev.yml  pyproject.toml  requirements.txt  setup.cfg
src/start_project/assets/common/doc/source/: api.rst  conf.py
src/start_project/assets/common/src/TODO_PROJECT_NAME/: __init__.py  appli.py  log.py
src/start_project/assets/matplotlib/: .gitignore  Makefile  setup.cfg
src/start_project/assets/matplotlib/doc/source/: conf.py
src/start_project/assets/matplotlib/examples/: 02_axis_but_not_generated.py  README.rst
src/start_project/assets/matplotlib/tests/: test_figure.py
tests/: test_basic.py  test_figure.py  test_install.py  test_log.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  .tmp_gitlab-ci.yml  CHANGELOG.rst  MANIFEST.in  Makefile  README.rst  environment.yml  environment_dev.yml  pyproject.toml
{{cookiecutter.project_slug}}/doc/: Makefile
{{cookiecutter.project_slug}}/doc/source/: api.rst  conf.py  index.rst  installation.rst  usage.rst
{{cookiecutter.project_slug}}/doc/source/_templates/: custom-class-template.rst
{{cookiecutter.project_slug}}/examples/: 02_axis_but_not_generated.py  README.rst  plot_01_first_test.py  plot_02_basic_exemple.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  cli.py  log.py
{{cookiecutter.project_slug}}/tests/: test_basic.py  test_figure.py  test_log.py
