[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "start_project"
dynamic = ["version"]
authors = [{name = "user", email = "user@mail.com"}]
description = "python template for cookieclicker"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "setuptools-scm"
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
dev  = ["black", "mypy", "flake8", "isort", "pre-commit"]
doc  = ["sphinx", "pydata-sphinx-theme", "sphinx_gallery"]

[project.urls]
homepage = "https://xxx"
changelog = "https://xxx"
repository = "https://gitlab.fr/xx/yy"


[project.scripts]
start-project = "start_project.appli:cli"

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
"start_project.share" = ["*"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[tool.setuptools_scm]
