[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "TODO_PROJECT_NAME"
dynamic = ["version"]
authors = [{name = "user", email = "user@mail.com"}]
description = "TODO_DESCRIPTION"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "setuptools-scm", "ipykernel"
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
dev  = ["black", "mypy", "flake8", "isort", "pre-commit"]
doc  = ["sphinx", "pydata-sphinx-theme"]

[project.urls]
homepage = "https://xxx"
changelog = "https://xxx"
repository = "https://gitlab.fr/xx/yy"


# [project.scripts]
# new_project = "TODO_PROJECT_NAME.module:function"

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
"TODO_PROJECT_NAME.share" = ["*"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[tool.setuptools_scm]
